--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "npx eslint src --ext .ts,.tsx",
+    "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
     "next": "12.3.0",
@@ -14,11 +15,13 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
-    "eslint": "8.23.1",
+    "eslint": "^8.23.1",
     "eslint-config-next": "12.3.0",
+    "eslint-plugin-import-helpers": "^1.2.1",
     "typescript": "4.8.3"
   }
 }
