--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@stitches/react": "^1.2.8",
     "@tanstack/react-query": "^4.3.9",
     "@tanstack/react-query-devtools": "^4.3.9",
+    "axios": "^0.27.2",
     "child_process": "^1.0.2",
     "keen-slider": "^6.8.2",
     "next": "12.3.0",
