--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modern-drawer": "^1.1.2",
     "stripe": "^10.10.0"
   },
   "devDependencies": {
